// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment from current user should render a comment 1`] = `
<div>
  <article
    class="sc-papXJ XSksx"
  >
    <header>
      <picture
        class="sc-bczRLJ kirzjg"
      >
        <source
          srcset="/./images/avatars/image-amyrobson.webp"
          type="image/webp"
        />
        <img
          alt="amyrobson"
          src="/./images/avatars/image-amyrobson.png"
          style="width: 100%;"
        />
      </picture>
      <h2
        class="sc-kDDrLX ikYFNm"
      >
        amyrobson
      </h2>
      <span
        class="sc-iqcoie ibqFpS"
      >
        you
      </span>
      <span>
        1 month ago
      </span>
    </header>
    <div
      class="content"
    >
      <p>
        Impressive! Though it seems the drag feature could be improved. But overall it looks incredible. You've nailed the design and the responsiveness at various breakpoints works really well.
      </p>
    </div>
    <div
      class="votes"
    >
      <div
        class="sc-iBkjds fTXLna"
        data-testid="voting"
      >
        <button
          class="sc-ftvSup jPGLgn"
          type="button"
        >
          <svg>
            plus.svg
          </svg>
          <span
            class="sr-only"
          >
            Plus
          </span>
        </button>
        <p>
          12
        </p>
        <button
          class="sc-ftvSup jPGLgn"
          type="button"
        >
          <svg>
            minus.svg
          </svg>
          <span
            class="sr-only"
          >
            Minus
          </span>
        </button>
      </div>
    </div>
    <div
      class="buttons"
    >
      <button
        class="sc-gsnTZi vpzmz"
        type="button"
      >
        <svg>
          delete.svg
        </svg>
        Delete
      </button>
      <button
        class="sc-gsnTZi dMLRiJ"
        type="button"
      >
        <svg>
          edit.svg
        </svg>
        Edit
      </button>
    </div>
  </article>
</div>
`;

exports[`Comment from other user should render a comment 1`] = `
<div>
  <article
    class="sc-papXJ XSksx"
  >
    <header>
      <picture
        class="sc-bczRLJ kirzjg"
      >
        <source
          srcset="/./images/avatars/image-amyrobson.webp"
          type="image/webp"
        />
        <img
          alt="amyrobson"
          src="/./images/avatars/image-amyrobson.png"
          style="width: 100%;"
        />
      </picture>
      <h2
        class="sc-kDDrLX ikYFNm"
      >
        amyrobson
      </h2>
      <span>
        1 month ago
      </span>
    </header>
    <div
      class="content"
    >
      <p>
        Impressive! Though it seems the drag feature could be improved. But overall it looks incredible. You've nailed the design and the responsiveness at various breakpoints works really well.
      </p>
    </div>
    <div
      class="votes"
    >
      <div
        class="sc-iBkjds fTXLna"
        data-testid="voting"
      >
        <button
          class="sc-ftvSup jPGLgn"
          type="button"
        >
          <svg>
            plus.svg
          </svg>
          <span
            class="sr-only"
          >
            Plus
          </span>
        </button>
        <p>
          12
        </p>
        <button
          class="sc-ftvSup jPGLgn"
          type="button"
        >
          <svg>
            minus.svg
          </svg>
          <span
            class="sr-only"
          >
            Minus
          </span>
        </button>
      </div>
    </div>
    <div
      class="buttons"
    >
      <button
        class="sc-gsnTZi dMLRiJ"
        type="button"
      >
        <svg>
          reply.svg
        </svg>
        Reply
      </button>
    </div>
  </article>
</div>
`;
